# edc-operator

./: .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  Makefile  README.md  crate-hashes.json  edc.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  new_version.md
.github/workflows/: build.yml
.readme/: README.md.j2
.readme/partials/: main.md.j2
demo/: .gitignore  Makefile  README.md  create-secrets.sh  demo.yaml  device1-data.csv  fileExchange.sh  ionos-token-example.yaml
demo/example-manifests/: bucket.yaml  ionos-token-secret.yaml  s3-secret.yaml
demo/manifests/: .gitignore  demo-logging.yaml  demo.yaml
deploy/: DO_NOT_EDIT.md
deploy/helm/edc-operator/: Chart.yaml  README.md  values.yaml
docker/: Dockerfile
edc-connector/: .gitignore  README.md  gradle.properties  settings.gradle.kts
edc-connector/connector/: Dockerfile  README.md  build.gradle.kts  docker-compose.yml
edc-connector/connector/resources/: config.properties
edc-connector/edc-ionos-extension/: README.md
edc-connector/edc-ionos-extension/core-ionos-s3/: README.md  build.gradle.kts
edc-connector/edc-ionos-extension/data-plane-ionos-s3/: README.md  build.gradle.kts
manifests/: .gitignore  edc.yaml  ionos-token.yaml  opensearch-dashboards-values.yaml  opensearch-values.yaml  s3-secret.yaml  vector-aggregator-discovery.yaml  vector-values.yaml
nix/: meta.json
rust/operator-binary/: Cargo.toml
rust/operator-binary/src/: CHANGELOG.md  affinity.rs  controller.rs  crd.rs  main.rs  product_logging.rs
tests/: release.yaml  test-definition.yaml
(+42 files in other folders)
