[package]
name = "stackable-edc-operator"
description = "Stackable EDC Operator"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
fnv.workspace = true
futures.workspace = true
pin-project.workspace = true
product-config.workspace = true
semver.workspace = true
serde_json.workspace = true
serde.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_yaml.workspace = true

[build-dependencies]
built.workspace = true
